[package]
name = "fendermint_abci"
description = "ABCI++ adapter using tendermint-rs and tower-abci"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
tower = "0.4"
# tower-abci = { git = "https://github.com/consensus-shipyard/tower-abci.git", branch = "tendermint-v0.37" }
tower-abci = { path = "../../../../tower-abci" }
#tendermint = { git = "https://github.com/informalsystems/tendermint-rs.git", branch = "mikhail/multi-tc-version-support" }
tendermint = { path = "../../../../tendermint-rs/tendermint" }
