[package]
name = "fendermint_storage"
description = "KV store abstraction for non-blockstore use."
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = { version = "15.1.0", optional = true }

[features]
default = ["inmem"]
inmem = ["im"]
