[package]
name = "fendermint_eth_api"
description = "Ethereum JSON-RPC facade"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
ethers-core = { workspace = true }
axum = { workspace = true }
jsonrpc-v2 = { workspace = true, features = ["easy-errors"] }
paste = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tendermint-rpc = { workspace = true }
