[package]
name = "fendermint_eth_api"
description = "Ethereum JSON-RPC facade"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
ethers-core = { workspace = true }
hex = { workspace = true }
jsonrpc-v2 = { workspace = true, features = ["easy-errors"] }
lazy_static = { workspace = true }
paste = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tendermint = { workspace = true }
tendermint-rpc = { workspace = true }

fvm_shared = { workspace = true }

fendermint_rpc = { path = "../../rpc" }
fendermint_vm_actor_interface = { path = "../../vm/actor_interface" }

[dev-dependencies]
clap = { workspace = true }
ethers = { workspace = true, features = ["abigen"] }
hex = { workspace = true }
lazy_static = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }

fendermint_testing = { path = "../../testing", features = ["arb"] }
