[package]
name = "contract-test"
description = "Model based testing for smart contracts"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
fvm = { workspace = true }
fvm_shared = { workspace = true }
tendermint-rpc = { workspace = true }

fendermint_testing = { path = ".." }
fendermint_vm_interpreter = { path = "../../vm/interpreter", features = ["bundle"] }
fendermint_vm_genesis = { path = "../../vm/genesis", features = ["arb"] }

[dev-dependencies]
tokio = { workspace = true }
quickcheck = { workspace = true }
