[package]
name = "fendermint_vm_genesis"
description = "Genesis data used to initialize the FVM state when the chain is created"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fvm_shared = { workspace = true }
libsecp256k1 = { workspace = true }

arbitrary = { workspace = true, optional = true }
quickcheck = { workspace = true, optional = true }

fendermint_testing = { path = "../../testing", optional = true }

[dev-dependencies]
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
hex = { workspace = true }

# Enable arb on self for tests.
fendermint_vm_genesis = { path = ".", features = ["arb"] }
fendermint_testing = { path = "../../testing" }

[features]
default = []
arb = ["arbitrary", "quickcheck", "fvm_shared/arb", "fendermint_testing/arb"]
