[package]
name = "fendermint_vm_message"
description = "Messages (transactions) received on chain and passed on to the FVM"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_tuple = { workspace = true }

cid = { workspace = true }
fvm_shared = { workspace = true }
fvm_ipld_encoding = { workspace = true }

arbitrary = { workspace = true, optional = true }
quickcheck = { workspace = true, optional = true }

[dev-dependencies]
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
cid = { workspace = true, features = ["arb"] }

# Enable arb on self for tests.
# Ideally we could do this with `#[cfg(any(test, feature = "arb"))]`,
# however in that case all the extra dependencies would not kick in.
fendermint_vm_message = { path = ".", features = ["arb"] }

[features]
default = []
arb = ["arbitrary", "quickcheck", "fvm_shared/arb", "cid/arb"]
