[package]
name = "fendermint_vm_topdown"
description = "The top down checkpoint mechanism for ipc protocol integration"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
ipc-sdk = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
cid = { workspace = true }
fvm_ipld_encoding = { workspace = true }
num-traits = { workspace = true }
async-stm = { workspace = true }
thiserror = { workspace = true }
ipc-agent-sdk = { workspace = true }
fvm_shared = { workspace = true }

tracing-subscriber = "0.3.17"
[dev-dependencies]

